Removed old GetCurrentUser method, redid DeleteUser method. Cleaned up some tests, but still some more need to be done.